hphp/hack/test/typecheck/constraints/override_with_super_constraint.php.constraint_method_call.exp
ERROR: File "override_with_super_constraint.php", line 6, characters 26-27:
This generic parameter is redundant because it only appears in a covariant (output) position. Consider replacing uses of generic parameter with `Tv` or specifying `<<__Explicit>>` on the generic parameter (Typing[4366])
